# f1-predict

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS_SUMMARY.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GITHUB_ACTIONS_STATUS.md  ISSUES_PRIORITY_ANALYSIS.md  ISSUE_34_PHASE2B_SUMMARY.md  ISSUE_34_PHASE3_COMPLETION_SUMMARY.md  ISSUE_34_STATUS.md  MONITORING_MIGRATION_ROADMAP.md  MONITORING_SYSTEM_ANALYSIS.md  Makefile  PHASE_2_PROGRESS.md  README.md  SCENARIO_BUILDER_GUIDE.md  SENSITIVITY_ANALYSIS_PLAN.md  SIMULATION_API_REFERENCE.md  SIMULATION_PLAN.md  SIMULATION_PROGRESS.md  SIMULATION_PROGRESS_PHASE2B.md  SIMULATION_PROGRESS_PHASE2C.md  SIMULATION_PROGRESS_PHASE3.md  STREAMLIT_UI_PHASE3_PLAN.md  TESTING_REPORT.md  UNIT_TESTING_PROGRESS.md  WEB_INTERFACE_SESSION_SUMMARY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  integration-tests.yml
.github/workflows-disabled/: ci.yml.disabled
.streamlit/: config.toml
alembic/: env.py
alembic/versions/: 462a2c9ee564_initial_monitoring_database_schema.py  98645a3399fe_add_actual_outcome_fields_to_.py
config/prompts/: championship_analysis.jinja2  driver_comparison.jinja2  post_race_analysis.jinja2  prediction_explanation.jinja2  qualifying_preview.jinja2  race_preview.jinja2  strategy_analysis.jinja2
data/: README.md  llm_usage.db
docs/: ARCHITECTURE_SUMMARY.md  CODEBASE_ANALYSIS.md  EXTERNAL_DATA.md  HYPERPARAMETER_OPTIMIZATION.md  README.md  REALTIME_DATA_INTEGRATION_DESIGN.md  UNIT_TESTING_PLAN.md  WEB_INTERFACE.md  WEB_INTERFACE_STATUS.md  api-reference.md  faq.md  troubleshooting.md
docs/architecture/: decisions.md  overview.md
docs/models/: README.md
docs/plans/: 2025-01-17-issue-38-phase1-design.md  2025-01-26-anomaly-detection-implementation.md  2025-10-27-web-interface-issue-15.md  2025-10-29-hyperparameter-optimization-design.md  2025-10-29-hyperparameter-optimization-implementation.md
docs/schemas/: data_models.md
docs/tutorials/: 01-quick-start.md
mlruns/0/: meta.yaml
mlruns/627460643550234399/: meta.yaml
scripts/: collect_historical_data.py
src/: __init__.py
src/f1_predict/: __init__.py  cli.py  cli_chat.py  cli_enhanced.py  logging_config.py
src/f1_predict/analysis/: __init__.py  base.py  historical_context.py  prediction_explainer.py  race_preview.py  shap_explainer.py  shap_visualizations.py
src/f1_predict/api/: __init__.py  base.py  ergast.py  realtime.py  weather.py
src/f1_predict/causal/: __init__.py  counterfactuals.py  dag.py  treatment_effects.py
src/f1_predict/data/: __init__.py  anomaly_hooks.py  anomaly_registry.py  cleaning.py  collector.py  external_models.py  image_collector.py  models.py  multimodal_dataset.py  multivariate_analyzer.py  profiling.py  race_anomaly_detector.py  tire_data.py  track_data.py  univariate_detector.py  weather_collector.py
src/f1_predict/features/: __init__.py  engineering.py
src/f1_predict/federated/: __init__.py  aggregation.py  client.py  compression.py  privacy.py  server.py
src/f1_predict/llm/: __init__.py  anthropic_provider.py  base.py  chat_session.py  cost_tracker.py  exceptions.py  explanations.py  (+3 more)
tests/: README.md  conftest.py  test_cli_anomaly.py
tests/analysis/: __init__.py  test_prediction_explainer.py  test_race_preview.py  test_shap_explainer.py
tests/api/: test_base.py  test_ergast.py  test_realtime.py  test_weather.py
tests/causal/: __init__.py  test_counterfactuals.py  test_dag.py  test_treatment_effects.py
tests/cli/: test_cli.py  test_cli_enhanced.py
tests/data/: test_anomaly_hooks.py  test_anomaly_registry.py  test_cleaning.py  test_collector.py  test_collector_integration.py  test_external_models.py  test_image_collector.py  test_models.py  test_multivariate_analyzer.py  test_profiling.py  test_race_anomaly_detector.py  test_tire_and_track_data.py  test_univariate_detector.py  test_weather_collector.py
tests/features/: __init__.py  test_engineering.py
tests/federated/: __init__.py  test_aggregation.py  test_client.py  test_compression.py  test_privacy.py  test_server.py
tests/integration/: conftest.py  test_llm_integration.py  test_multimodal_integration.py  test_performance_benchmarks.py
tests/llm/: __init__.py  test_anthropic_provider.py  test_base.py  test_chat_session.py  test_cli_chat.py  test_cost_tracker.py  test_explanations.py  test_local_provider.py  test_openai_provider.py  test_templates.py
tests/metrics/: __init__.py  test_performance.py
tests/models/: __init__.py  test_advanced_cnn.py  test_anomaly_detection.py  test_arima.py  test_attention.py  test_baseline.py  test_data_augmentation.py  test_dataset_cache_builder.py  test_ensemble.py  test_evaluation.py  test_image_preprocessing.py  test_lightgbm.py  test_logistic.py  test_lstm.py  test_multimodal_dataset.py  test_multimodal_evaluation.py  test_multimodal_fusion.py  test_multimodal_trainer.py  test_multimodal_training.py  test_random_forest.py  test_rule_based_ensemble.py  test_speed_trace_generator.py  test_telemetry_visualization.py  test_time_series.py  test_training_integration.py  test_vision_encoder.py  test_visual_explanations.py  test_xgboost.py
tests/optimization/: __init__.py  test_config_loader.py  test_hyperparameter_optimizer.py  test_integration.py  test_mlflow_integration.py  test_objectives.py  test_search_spaces.py
tests/simulation/: test_driver_state.py  test_incidents.py  test_pit_strategy.py  test_race_state.py  test_scenario_builder.py  test_sensitivity_analyzer.py  test_sensitivity_report.py  test_simulator.py
tests/strategy/: test_pit_optimizer.py  test_safety_car.py  test_tire_degradation.py  test_weather.py
tests/web/: conftest.py  test_analytics.py  test_analytics_page.py  test_analytics_utils.py  test_chat_page.py  test_compare_page.py  test_comparison.py  test_home_page.py  test_llm_explanations.py  test_predict_page.py  test_prediction.py  test_prediction_utils.py  test_reports.py  test_settings_page.py  test_settings_persistence.py  test_simulator_page.py  test_visualization.py
(+116 files in other folders)
